# tmux-ws

./: CHANGELOG.md  README.md  agent-daemon.cabal  flake.nix  gate.sh  mkdocs.yml  release-please-config.json  tmux-ws.cabal
.github/workflows/: ci.yml  darwin-release.yml  release.yml  sync-cabal-version.yml
.specify/memory/: constitution.md
docs/: deployment.md  design.md  development.md  index.md  installation.md  release.md  tailscale.md  usage.md
nix/: apps.nix  checks.nix  linux-artifact-smoke.nix  linux-release.nix  module.nix  project.nix
scripts/: render-homebrew-formulas.sh
specs/075-touch-first-ui/: plan.md  spec.md  tasks.md
specs/077-authoritative-nix-ci/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/077-authoritative-nix-ci/contracts/: quality-contract.md
specs/078-reproducible-linux-releases/: plan.md  tasks.md
specs/079-documentation-governance/: spec.md  tasks.md
specs/082-close-current-context/: plan.md  tasks.md
specs/092-touch-command-deck/: plan.md  spec.md  tasks.md
specs/095-release-product-name/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/095-release-product-name/checklists/: requirements.md
specs/095-release-product-name/contracts/: release-surfaces.md
specs/099-v031-published-wording/: plan.md  spec.md  tasks.md
specs/84-touch-docs-release/: tasks.md
src/AgentDaemon/: Api.hs  Close.hs  Tmux.hs  Types.hs
src/AgentDaemon/Api/: Types.hs
test/: release-plan.sh
test/AgentDaemon/: ApiSpec.hs  CloseSpec.hs  TmuxCloseSpec.hs
ui/preview/: fixture.js
ui/src/: Main.purs
ui/src/AgentDaemon/: Api.js  Api.purs  TerminalInput.mjs  Types.purs
ui/src/AgentDaemon/FFI/: Browser.js  Terminal.js  Terminal.purs
ui/test/: CommandDeckInteraction.test.mjs  PreviewFixture.test.mjs  TerminalInput.test.mjs
