cabal-version:   3.0
name:            agent-daemon
version:         0.1.1
synopsis:        WebSocket daemon for managing Claude Code agent sessions
description:
  A Haskell WebSocket server that manages Claude Code agent
  sessions via tmux and git worktrees. Provides terminal access
  through xterm.js in the browser.

license:         MIT
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
copyright:       (c) 2026 Paolo Veronelli
category:        Development
build-type:      Simple
homepage:        https://github.com/lambdasistemi/tmux-ws
bug-reports:     https://github.com/lambdasistemi/tmux-ws/issues
extra-doc-files: README.md

library
  exposed-modules:
    AgentDaemon
    AgentDaemon.Api
    AgentDaemon.Api.Types
    AgentDaemon.Branch
    AgentDaemon.Git
    AgentDaemon.Recovery
    AgentDaemon.Server
    AgentDaemon.Terminal
    AgentDaemon.Tmux
    AgentDaemon.Types
    AgentDaemon.Worktree

  build-depends:
    , aeson           >=2.1  && <2.3
    , base            >=4.18 && <5
    , bytestring      >=0.11 && <0.13
    , containers      >=0.6  && <0.8
    , directory       >=1.3  && <1.4
    , http-types      >=0.12 && <0.13
    , posix-pty       >=0.2  && <0.3
    , process         >=1.6  && <1.7
    , servant         >=0.20 && <0.21
    , servant-server  >=0.20 && <0.21
    , stm             >=2.5  && <2.6
    , tagged          >=0.8  && <0.9
    , text            >=2.0  && <2.2
    , time            >=1.12 && <1.15
    , typed-process   >=0.2  && <0.3
    , wai             >=3.2  && <3.3
    , wai-websockets  >=3.0  && <3.1
    , warp            >=3.3  && <3.5
    , websockets      >=0.12 && <0.14

  hs-source-dirs:     src
  default-language:   GHC2021
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData

executable agent-daemon
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   GHC2021
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , agent-daemon
    , base                  >=4.18 && <5
    , optparse-applicative  >=0.17 && <0.19

  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

test-suite e2e-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    AgentDaemon.ApiSpec
    AgentDaemon.BranchSpec
    AgentDaemon.GitSpec
    AgentDaemon.RecoverySpec
    AgentDaemon.TerminalSpec

  hs-source-dirs:     test
  default-language:   GHC2021
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , aeson           >=2.1  && <2.3
    , agent-daemon
    , base            >=4.18 && <5
    , bytestring      >=0.11 && <0.13
    , containers      >=0.6  && <0.8
    , directory       >=1.3  && <1.4
    , hspec           >=2.11 && <2.12
    , http-client     >=0.7  && <0.8
    , http-types      >=0.12 && <0.13
    , process         >=1.6  && <1.7
    , servant         >=0.20 && <0.21
    , servant-client  >=0.20 && <0.21
    , stm             >=2.5  && <2.6
    , temporary       >=1.3  && <1.4
    , text            >=2.0  && <2.2
    , time            >=1.12 && <1.15
    , warp            >=3.3  && <3.5
    , websockets      >=0.12 && <0.14

  build-tool-depends: hspec-discover:hspec-discover
  default-extensions:
    DataKinds
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
